# hardened_malloc_rs

./: .gitmodules  .rustfmt.toml  Cargo.toml  build.rs
src/: bindings.rs  lib.rs
tests/src/: main.rs
