[package]
name = "hardened_malloc-rs"
description = "hardened_malloc rust wrapper"
authors = ["strawberry <strawberry@puppygock.gay>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/girlbossceo/hardened_malloc-rs"
keywords = ["hardened_malloc", "malloc", "ffi", "security", "bindings"]
categories = ["api-bindings", "memory-management"]
readme = "README.md"

# everything after the '+' is the latest GrapheneOS hardened_malloc repo tag
version = "0.1.2+13.1"

[features]
default = ["static", "clang", "standard"]

## compiler
clang = []
gcc = []

## linking method
dynamic = []
static = []

## hardened_malloc config
# "standard" feature is "default.mk" config in hardened_malloc
light = []
standard = []
